--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "convert-fonts": "node scripts/convert-fonts.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -16,9 +17,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.1.7",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -35,5 +39,5 @@
     "tailwindcss": "^4.1.7",
     "vite": "^6.3.5"
   },
-  "homepage": "https://doqendev.github.io/logo-previewer"
+  "homepage": "https://doqenm.github.io/previewer/"
 }
